syntax = "proto3";

package pb;

import "user.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/muazwzxv/go-backend-masterclass/pb";

message CreateUserRequest {
  string userName = 1;
  string fullName = 2;
  string email = 3;
  string password = 5;
}

message CreateUserResponse {
  User user = 1;
}

message LoginUserRequest {
  string userName = 1;
  string password = 2;
}

message LoginUserResponse {
  User user = 1;
  string accessToken = 2;
  google.protobuf.Timestamp expiresAt = 3;
}

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
  rpc Login (LoginUserRequest) returns (LoginUserResponse) {}
}
