syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/muazwzxv/go-backend-masterclass/pb";

message User {
  int64 id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string userName = 5;
  string hashedPassword = 6;
  google.protobuf.Timestamp passwordChangedAt = 7;
  google.protobuf.Timestamp createdAt = 8;
  google.protobuf.Timestamp deletedAt = 9;
}


